# examples

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
helpers/: inject_account_id.py  mugc.py  setup.sh
resources/example-msg-templates/: Readme.md  default.html.j2  slack_default.j2
resources/example-policies/: cleanup-policies.yml  my-first-policy-event.yml
resources/example-policies-infrastructure/: main.tf
resources/example-policies-infrastructure/c7n-101/: main.tf
resources/example-policies-infrastructure/c7n-workshop/: c7n-workshop-policy.json  main.tf  my-first-policy-event-rw-ec2-cloudwatch-policy.json
resources/example-policies/c7n-101/: c7n-101-commands.txt  my-first-policy-pull.yml
resources/example-policies/c7n-workshop/: 1-aws-iam-role-list-pull.yml  2-aws-sg-wide-open-list-pull.yml  3-aws-sg-wide-open-remediate-pull.yml  5-aws-sqs-unencrypted-remediate-pull.yml  6-aws-sg-open-remediate-event.yml  7-aws-sg-auto-tag-creator-event.yml  7-aws-sg-auto-tag-event.yml  8-aws-sqs-unencrypted-remediate-event.yml  aws-sg-open-remediate-event.yml  aws-sg-wide-open-remediate-pull.yml  aws-sqs-enencrypted-remediate-event.yml  aws-sqs-unencrypted-list-pull.yml  c7n-workshop-commands.txt
tutorials/: c7n-tutorial-cleanup.yml  getting-started-with-c7n.md
