[tool.poetry]
name = "c7n examples repo"
version = "0.1.0"
description = "CExample policies, infrastructure, and helpful automation for learning c7n"
authors = ["Cloud Custodian Project"]
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/examples"

[tool.poetry.dependencies]
python = "^3.7"
c7n = {git = "https://github.com/cloud-custodian/cloud-custodian.git", rev = "0.9.14.0"}
appdirs = "1.4.4"
argcomplete = "1.12.3"
attrs = "21.2.0"
"backports.entry-points-selectable" = "1.1.0"
boto3 = "1.19.12"
botocore = "1.22.12"
c7n-org = "0.6.13"
click = "8.0.3"
colorama = "0.4.4"
distlib = "0.3.1"
docutils = "0.17.1"
filelock = "3.0.12"
importlib-metadata = "4.8.1"
iniconfig = "1.1.1"
jmespath = "0.10.0"
jsonschema = "3.2.0"
packaging = "21.2"
platformdirs = "2.4.0"
pluggy = "1.0.0"
py = "1.11.0"
pyparsing = "2.4.7"
pyrsistent = "0.18.0"
pytest = "6.2.5"
python-dateutil = "2.8.2"
PyYAML = "5.4.1"
s3transfer = "0.5.0"
six = "1.16.0"
tabulate = "0.8.9"
toml = "0.10.2"
tox = "3.24.4"
typing-extensions = "3.10.0.2"
urllib3 = "1.26.7"
virtualenv = "20.8.1"
zipp = "3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
