[tool.poetry]
name = "c7n examples repo"
version = "0.1.0"
description = "CExample policies, infrastructure, and helpful automation for learning c7n"
authors = ["Cloud Custodian Project"]
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/examples"

[tool.poetry.dependencies]
python = "^3.7"
c7n = "^0.9.15"

colorama = "0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
